[package]
publish = false

name = "bimap"
version = "0.9.0"
description = "Bijective maps"
authors = ["Billy Rieger <wrieger@protonmail.com>"]
license = "Apache-2.0/MIT"
edition = "2018"

# External links.
repository = "https://github.com/billyrieger/bimap-rs/"
documentation = "https://docs.rs/bimap/"
readme = "README.md"

[features]
default = ["std"]
std = []

# This ensures that documentation for optional features is on docs.rs.
[package.metadata.docs.rs]
all-features = true
